// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigationLink Should properly respond to clicks 1`] = `
<div
  className="hi"
  onClick={[Function]}
  role="button"
  tabIndex="-1"
>
  Hi, I'm a Link
</div>
`;

exports[`SideNavigationLink Should render 1`] = `
<div
  className="hi"
  role="button"
  tabIndex="-1"
>
  Hi, I'm a Link
</div>
`;
